testsuite/tests/lexical_envs/invalid_subunit_root/bad_main_rule_2.lkt
from lexer_example import foo_lexer

@with_lexer(foo_lexer)
grammar foo_grammar {
    @main_rule main_rule <-
        list+(ExampleWrapper(Example("example")))
}

class FooNode implements Node[FooNode] {
}

class ExampleWrapper: FooNode {
    @parse_field example: Example
}

@ple_unit_root class Example: FooNode {
}
